plugins/xpath/xpath-lang/testData/xpath2/highlighting/toOperatorNotApplicable.xpath2
<error descr="Operator 'to' cannot to applied to expressions of type 'xs:string'">'1' to 2</error>